--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 	<nav class="flex">
 
-		<img class="option" src="Vietnam.png" alt="Vietnam" tabindex="1" onmouseover="upDate(this)" onfocus="upDate(this)" onmouseout="unDo()" onblur="unDo()">
+		<img class="option" src="Vietnam.png" alt="Vietnam" onmouseover="upDate(this)" onfocus="upDate(this)" onmouseout="unDo()" onblur="unDo()">
 
-		<img class="option" src="Vietnam.png" alt="Vietnam" tabindex="2" onmouseover="upDate(this)" onfocus="upDate(this)" onmouseout="unDo()" onblur="unDo()">
+		<img class="option" src="Vietnam.png" alt="Vietnam" onmouseover="upDate(this)" onfocus="upDate(this)" onmouseout="unDo()" onblur="unDo()">
 
-		<img class="option" src="Vietnam.png" alt="Vietnam" tabindex="3" onmouseover="upDate(this)" onfocus="upDate(this)" onmouseout="unDo()" onblur="unDo()">
+		<img class="option" src="Vietnam.png" alt="Vietnam" onmouseover="upDate(this)" onfocus="upDate(this)" onmouseout="unDo()" onblur="unDo()">
 	</nav>
 
 	<script src="js/script.js"></script>
